# OgrePong

./: Ball.cpp  Ball.h  CMakeLists.txt  CollisionTestedObject.h  Paddle.cpp  Paddle.h  Pong.cpp  Pong.h  Pongmain.cpp  README.md  Wall.cpp  Wall.h
resources/: BlueBold.fontdef  PauseOverlay.overlay  Score.overlay  ball.material  paddle.material  wall.material
